--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -26,7 +26,7 @@
       <a href="/foo/bar">FooBar</a>
     </nav>
     <!-- HTML -->
-    <%- __html %>
+    <%- __content %>
 
     <!-- Script -->
     <script type="module">
