--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -21,6 +21,7 @@
   </head>
   <body>
     <nav>
+      <h1 data-binding="count">0</h1>
       <a href="/howdy">Howdy</a>
       <a href="/foo">Foo</a>
       <a href="/foo/bar">FooBar</a>
