--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -26,12 +26,16 @@
       <a href="/foo">Foo</a>
       <a href="/foo/bar">FooBar</a>
     </nav>
-    <!-- HTML -->
-    <%- __content %>
 
-    <!-- Script -->
+    <!-- HTML -->
+    <div data-scope="content"><%- __content %></div>
+
+    <!-- Client-Side Script -->
+    <% if (__script) { %>
     <script type="module">
       <%- __script %>
+      <%- __clientjs %>
     </script>
+    <% } %>
   </body>
 </html>
