--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -15,9 +15,11 @@
     />
 
     <!-- Styles -->
+    <% if (__style) { %>
     <style>
       <%- __style %>
     </style>
+    <% } %>
   </head>
   <body>
     <nav>
