--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -6,13 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="<%= meta.description %>" />
     <link rel="icon" href="/assets/favicon.png" />
-
-    <link
-      rel="stylesheet"
-      href="/assets/styles/code.css"
-      media="print"
-      onload="this.media='all'"
-    />
+    <link rel="stylesheet" href="/assets/styles/base.css" />
 
     <% if (__style) { %>
     <style>
