--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -16,10 +16,7 @@
   </head>
   <body>
     <nav>
-      <h1 data-binding="count">0</h1>
-      <a href="/howdy">Howdy</a>
-      <a href="/foo">Foo</a>
-      <a href="/foo/bar">FooBar</a>
+      <a href="/">Home</a>
     </nav>
 
     <div data-scope="content"><%- __content %></div>
