--- a/pages/assets/styles/base.css
+++ b/pages/assets/styles/base.css
@@ -444,8 +444,8 @@ h6 {
 img,
 video,
 iframe {
-  /* max-inline-size: 100%; */
-  /* block-size: auto; */
+  max-inline-size: 100%;
+  block-size: auto;
 }
 
 /** Code Blocks */
