--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -5,7 +5,10 @@
     <title><%= meta.title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="<%= meta.description %>" />
-    <link rel="icon" href="/assets/favicon.png" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🚧</text></svg>"
+    />
     <link rel="stylesheet" href="/assets/styles/base.css" />
 
     <% if (__style) { %>
@@ -15,10 +18,6 @@
     <% } %>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-    </nav>
-
     <div data-scope="content"><%- __content %></div>
 
     <% if (__script) { %>
