--- a/pages/style.css
+++ b/pages/style.css
@@ -1,4 +1,132 @@
+@import url('https://use.typekit.net/joe8rol.css');
+
 :root {
-  --color-background: #c3c7ee;
-  --color-text: #000;
+  --color-background: #111;
+  --color-text: #ffa500;
+}
+
+/* Layout */
+body {
+  padding-top: var(--margin);
+  padding-bottom: var(--margin);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  min-height: 100vh;
+  display: grid;
+  grid-auto-rows: auto 1fr auto;
+}
+
+/* Logo */
+.app__logo {
+  font-size: 3rem;
+  text-shadow: 0 0 1em currentColor;
+  display: inline-block;
+  font-weight: bold;
+}
+
+.app__logo:hover {
+  text-shadow: 0 0 2em currentColor;
+}
+
+.app__logo--triangle {
+  position: relative;
+  animation: shift 4s ease-in-out infinite alternate;
+  transform: skewX(0deg);
+  z-index: 1;
+}
+
+.app__logo--cursor::after {
+  content: '_';
+  animation: blink 1s ease-in-out infinite alternate;
+}
+
+/* Page Heading */
+.app__content > h1:first-of-type {
+  font-family: 'bd-console-variable', sans-serif;
+  font-size: 8rem;
+  font-variation-settings: 'GAME' 100;
+  line-height: 0.7;
+  margin: 0;
+  color: var(--color-text);
+}
+
+.app__content > h1:first-of-type + p:has(+ hr) {
+  font-family: 'lores-12', sans-serif;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  margin: 0;
+}
+
+.app__content > h1:first-of-type + p + hr {
+  border-color: var(--color-text);
+  border-style: solid;
+  border-width: 0.3rem;
+  max-width: 20rem;
+  display: inline-block;
+  width: 100%;
+}
+
+/* Footer */
+.app__footer {
+  font-family: 'lores-12', sans-serif;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 400;
+  padding-top: var(--margin);
+  text-transform: uppercase;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.app__footer__barcode {
+  fill: currentColor;
+  height: 6em;
+}
+
+@keyframes shift {
+  0%,
+  40%,
+  44%,
+  58%,
+  61%,
+  65%,
+  69%,
+  73%,
+  100% {
+    transform: skewX(0deg);
+  }
+  41% {
+    transform: skewX(10deg);
+  }
+  42% {
+    transform: skewX(-10deg);
+  }
+  59% {
+    transform: skewX(35deg) skewY(10deg);
+  }
+  60% {
+    transform: skewX(-35deg) skewY(-10deg);
+  }
+  63% {
+    transform: skewX(10deg) skewY(-5deg);
+  }
+  70% {
+    transform: skewX(-30deg) skewY(-20deg);
+  }
+  71% {
+    transform: skewX(10deg) skewY(-10deg);
+  }
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
