--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -39,6 +39,13 @@
     <script type="module">
       <%- __scripts %>
     </script>
-    <% } %>
+
+    <% } %> <%# Adobe Fonts %>
+
+    <script
+      async
+      src="https://use.typekit.net/joe8rol.js"
+      onload="Typekit.load({ kitId: 'joe8rol'});"
+    ></script>
   </body>
 </html>
