--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title><%= meta.title %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="<%= meta.description %>" />
-    <link rel="preconnect" href="https://use.typekit.net/" crossorigin />
-    <link rel="icon" href="/assets/favicon.svg" />
 
-    <link rel="stylesheet" href="/assets/styles/base.css" />
+<head>
+  <meta charset="UTF-8" />
+  <title><%= meta.title %></title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="<%= meta.description %>" />
+  <link rel="preconnect" href="https://use.typekit.net/" crossorigin />
+  <link rel="icon" href="/assets/favicon.svg" />
 
-    <%# Inject page styles %> <% if (__styles) { %>
-    <style>
-      <%- __styles %>
-    </style>
-    <% } %>
-  </head>
+  <link rel="stylesheet" href="/assets/styles/base.css" />
 
-  <body>
-    <header class="app__header" data-scope="header">
-      <a href="/">
-        <span class="app__logo app__logo--triangle">&triangle;</span>
-        <span class="app__logo app__logo--cursor"></span>
-      </a>
-    </header>
+  <%# Inject page styles %> <% if (__styles) { %>
+  <style>
+    <%- __styles %>
+  </style>
+  <% } %>
+</head>
 
-    <main class="app__content" data-scope="content"><%- __content %></main>
+<body>
+  <header class="app__header" data-scope="header">
+    <a href="/">
+      <span class="app__logo app__logo--triangle">&triangle;</span>
+      <span class="app__logo app__logo--cursor"></span>
+    </a>
+  </header>
 
-    <footer class="app__footer" data-scope="footer">
-      <span class="app__message" data-message></span>
+  <main class="app__content" data-scope="content"><%- __content %></main>
 
-      <span class="copywright">
-        © <%= new Date().getUTCFullYear() %>, fnhipster
-      </span>
-    </footer>
+  <footer class="app__footer" data-scope="footer">
+    <span class="app__message" data-message></span>
 
-    <%# Inject page scripts %> <% if (__scripts) { %>
-    <script type="module">
-      <%- __scripts %>
-    </script>
+    <span class="copywright">
+      © <%= new Date().getUTCFullYear() %>, fnhipster
+    </span>
+  </footer>
 
-    <% } %> <%# Adobe Fonts %>
+  <%# Inject page scripts %> <% if (__scripts) { %>
+  <script type="module">
+    <%- __scripts %>
+  </script>
 
-    <script
-      async
-      src="https://use.typekit.net/joe8rol.js"
-      onload="Typekit.load({ kitId: 'joe8rol'});"
-    ></script>
-  </body>
+  <% } %>
+
+  <%# Adobe Fonts %>
+  <script async src="https://use.typekit.net/joe8rol.js" onload="Typekit.load({ kitId: 'joe8rol'});"></script>
+</body>
+
 </html>
