--- a/pages/assets/styles/base.css
+++ b/pages/assets/styles/base.css
@@ -356,15 +356,7 @@ template {
   --color-background: initial;
   --color-text: initial;
 
-  --color-links: initial;
-
-  /* Typography */
-  --font-family-heading: 'system-ui', sans-serif;
-  --font-weight-heading: 400;
-
-  --font-family-body: 'ui-serif', serif;
-  --font-weight-body: 400;
-  --font-weight-body--bold: 700;
+  --color-links: currentColor;
 
   /* Spacing */
   --spacing-sm: 1rem;
@@ -375,6 +367,11 @@ template {
   --margin: 2rem;
 }
 
+:root {
+  --color-background: #111;
+  --color-text: #ffa500;
+}
+
 html {
   font-size: 62.5%;
   background-color: var(--color-background);
@@ -382,24 +379,42 @@ html {
 }
 
 body {
-  font-family: var(--font-family-body);
-  font-weight: var(--font-weight-body);
-  line-height: 1.5;
-  font-size: 2rem;
-  width: 100%;
-  max-width: calc(100rem - (var(--margin) * 2));
-  margin: 0 auto;
-  padding: 0 var(--margin);
   box-sizing: border-box;
+  display: grid;
+  font-family: 'lexia-mono-variable', monospace, sans-serif;
+  font-size: 1.8rem;
+  font-variation-settings: 'wght' 400;
+  grid-auto-rows: auto 1fr auto;
+  line-height: 1.5;
+  margin: 0 auto;
+  max-width: calc(100rem - (var(--margin) * 2));
+  min-height: 100vh;
+  padding: var(--margin);
+  width: 100%;
+}
+
+*::selection {
+  background: var(--color-text);
+  color: var(--color-background);
 }
 
 a {
   color: var(--color-links);
+}
+
+a:hover,
+a:focus {
+  outline: 0.1em solid currentColor;
   text-decoration: none;
+  outline-offset: 0.15em;
 }
 
 a:visited {
   color: var(--color-links);
+}
+
+strong {
+  font-variation-settings: 'wght' 800;
 }
 
 h1,
@@ -408,8 +423,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-family-heading);
-  font-weight: var(--font-weight-heading);
+  font-family: 'lores-12', sans-serif;
+  font-variation-settings: 'wght' 400;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -444,11 +460,20 @@ iframe {
   block-size: auto;
 }
 
+blockquote {
+  font-size: 1.2em;
+  line-height: 1.3;
+  font-style: italic;
+  margin: 0;
+  padding: var(--spacing-sm) var(--spacing-md);
+  border-left: 0.5em solid;
+}
+
 /** Code Blocks */
 
 .hljs {
   display: block;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   line-height: 1.5;
   overflow-x: auto;
   padding: var(--spacing-sm) var(--spacing-sm);
@@ -467,7 +492,6 @@ iframe {
 .hljs {
   color: #c9d1d9;
   background: #0d1117;
-  text-shadow: 0 0 0.15em;
 }
 
 .hljs-doctag,
