--- a/pages/assets/styles/base.css
+++ b/pages/assets/styles/base.css
@@ -405,7 +405,7 @@ a {
 
 a:hover,
 a:focus {
-  outline: 0.1em solid currentColor;
+  outline: 0.1rem solid currentColor;
   text-decoration: none;
   outline-offset: 0.15em;
 }
