--- a/pages/haiku/style.css
+++ b/pages/haiku/style.css
@@ -1,6 +1,6 @@
 :root {
   --color-text: #e79f2f;
-  --color-background: #4b0082;
+  --color-background: radial-gradient(#5e039f, #430173);
 }
 
 .app__content {
@@ -11,7 +11,7 @@
 }
 
 .app__content h1 {
-  margin: 0;
+  margin: 0 0 0.2em;
 }
 
 .app__content p {
