--- a/pages/template.ejs
+++ b/pages/template.ejs
@@ -6,9 +6,9 @@
   <title><%= meta.title %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="<%= meta.description %>" />
-  <link rel="preconnect" href="https://use.typekit.net/" crossorigin />
   <link rel="icon" href="/assets/favicon.svg" />
 
+  <link rel="stylesheet" href="/assets/styles/normalize.css" />
   <link rel="stylesheet" href="/assets/styles/base.css" />
 
   <%# Inject page styles %>
@@ -44,9 +44,6 @@
   </script>
 
   <% } %>
-
-  <%# Adobe Fonts %>
-  <script async src="https://use.typekit.net/joe8rol.js" onload="Typekit.load({ kitId: 'joe8rol'});"></script>
 </body>
 
 </html>
