--- a/pages/style.css
+++ b/pages/style.css
@@ -1,17 +1,20 @@
 /* Fonts */
 @font-face {
   font-family: 'Noto Sans Mono';
+  font-display: swap;
   src: url('/assets/fonts/NotoSansMono-Regular.woff2');
 }
 
 @font-face {
   font-family: 'Noto Sans Mono';
+  font-display: swap;
   src: url('/assets/fonts/NotoSansMono-Bold.woff2');
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'VT323';
+  font-display: swap;
   src: url('/assets/fonts/VT323-Regular.woff2');
 }
 
